--- a/style.css
+++ b/style.css
@@ -73,8 +73,9 @@ body{
 }
 
 .rightSideBar{
-  height: 100%;
+  height: 130%;
   width: 10%; 
+  position:absolute;
   top: 130px; 
   left: 90%;
   background-color:white;
@@ -83,10 +84,11 @@ body{
 }
 
 .leftSideBar{
-  height: 100%;
+  height: 130%;
   width: 10%;
   top: 130px;
   left: 0%;
+  position:absolute;
   background-color:white;
   overflow-x: hidden;
   padding-top: 20px;
