--- a/style.css
+++ b/style.css
@@ -1,95 +1,39 @@
-*{
-	padding:0px;
-	border:0px;
-	margin:0px;
-}
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Keaton's Website</title>
+	<link rel = "stylesheet" type = "text/css" href = "style/style.css">
+</head>
 
-body{
-	background-color:#f4f4f4;
-	color:#555;
-	font-family:Arial, Helvetica, sans-sarrif;
-	font-size:16px;
-	line-height:1.6em;
-	margin:0;
-}
+<body>
+	<header id="main-header">
+		<div class="top-header">
+			<h1>Shop</h1>
+		</div>
+	</header>
 
-.container{
-	overflow:hidden;
-	margin-left:15%;
-	margin-right:15%;
-	position:relative;
-}
+	<nav id="navbar">
+		<img id = "logo" src="./images/logo.png" alt = "logo" height = "50">
+			<ul>
+				<li><a href="file:///C:/Users/devde/KeatonWebsite/index.html">Home</a></li>
+				<li><a href="file:///C:/Users/devde/KeatonWebsite/about.html">About</a></li>
+				<li><a href="file:///C:/Users/devde/KeatonWebsite/shop.html">Shop</a></li>
+				<li><a href="file:///C:/Users/devde/KeatonWebsite/blog.html">Blog</a></li>
+			</ul>
+	</nav>
 
-#main-header{
-	background-color:coral;
-	color:white;
-	height:55px;
-	text-align:center;
-	padding-top:25px;
-}
+	<section id = "main">
+		<div class = "container">
+			<h1>Welcome</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		</div>
+		
+	</section>
 
-#navbar{
-	background-color:red;
-	height:50px;
-}
-
-.container h1{
-	position:relative;
-	line-height:3em;
-	text-align:center;
-}
-
-#navbar ul{
-	list-style-type:none;
-	text-align:center;
-	vertical-align:center;
-	overflow:hidden;
-
-}
-#navbar li{
-	display:block;
-	padding-top:10px;
-	padding-bottom:10px;
-	width:10%;
-	float:left;
-}
-#navbar a{
-	color:white;
-	background-color:rgb(255,100,60);
-	background-size:20px 30px;
-	padding-top:15px;
-	padding-bottom:15px;
-}
-
-#navbar a:hover{
-	color:white;
-	background-color:black;
-	text-decoration:underline;
-}
-
-#navbar a:active{
-	color:black;
-	text-decoration:none;
-}
-
-.rightSideBar{
-  height: 130%;
-  width: 10%; 
-  position:absolute;
-  top: 130px; 
-  left: 90%;
-  background-color:white;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
-
-.leftSideBar{
-  height: 130%;
-  width: 10%;
-  top: 130px;
-  left: 0%;
-  position:absolute;
-  background-color:white;
-  overflow-x: hidden;
-  padding-top: 20px;
-}
+</body>
+</html>
