--- a/style.css
+++ b/style.css
@@ -3,85 +3,138 @@
 	border:0px;
 }
 
-body{
-	background-color:#f4f4f4;
-	color:#555;
-	font-family:Arial, Helvetica, sans-sarrif;
-	font-size:16px;
-	line-height:1.6em;
-	margin:0;
+body, h1, ul {
+    margin: 0;
+    padding: 0;
+    line-height:1.6em;
 }
 
-.container{
-	overflow:hidden;
-	position:relative;
-	padding:5px;
+body {
+    font-family: Arial, sans-serif;
+   	font-size:16px;
+    background-color: #ffffff;
+    color: black;
 }
 
-#main-header{
-	background-color:coral;
-	color:white;
-	height:100px;
+header {
+    background-color: #e31783;
+    color: #fff;
+    text-align: center;
+    padding: 100px 0;
 }
 
-#navbar{
-	background-color:coral;
-	float:left;
-	width:150px;
+header h1 {
+    font-size: 36px;
 }
 
-#logo{
-	position:absolute;
-	left:5px;
-	top:10px;
-	margin:0px;
-	padding:0px;
-	text-align:center;
+/* styling for the navbar elements */
+.navbar{
+	background-color:#b32972;
+	text-align: center;
 }
 
-.container h1{
-	position:relative;
-	left:10%;
-}
 
-.top-header h1{
-	position:absolute;
-	top:5px;
-	left:50%;
-}
-
-#navbar ul{
-	list-style:none;
-	text-align:center;
-	vertical-align:center;
-	overflow:hidden;
+.navbar ul{
+	list-style: none;
+    padding: 0;
 
 }
-#navbar li{
-	border:10px;
-	display:block;
-	padding-top:10px;
-	padding-bottom:10px;
+.navbar li{
+	display: inline;
+    margin: 0 20px;
 }
-#navbar a{
-	color:white;
-	background-color:rgb(255,100,60);
-	background-size:20px 30px;
-	padding-top:15px;
-	padding-bottom:15px;
-	padding-left:35%;
-	padding-right:100%;
-	text-decoration:none;
+.navbar a{
+	text-decoration: none;
+    color: #fff;
 }
 
-#navbar a:hover{
-	color:white;
-	background-color:black;
+.navbar a:hover{
+	color:blue;
 	text-decoration:underline;
 }
 
-#navbar a:active{
-	color:black;
+.navbar a:active{
+	color:lightblue;
 	text-decoration:none;
 	
+}
+
+/* override header and navbar colors based on page */
+#contact-header{
+	background-color:#333;
+}
+
+#contact-nav {
+	background-color:#444;
+}
+
+#research-header{
+	background-color:#1aa61c;
+}
+
+#research-nav {
+	background-color:#8bc784;
+}
+
+#machining-header{
+	background-color:#1aa61c;
+}
+
+#machining-nav {
+	background-color:#8bc784;
+}
+
+#pct-header{
+	background-color:#1aa61c;
+}
+
+#pct-nav {
+	background-color:#8bc784;
+}
+
+main {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
+
+.image-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* Styles for individual images */
+.image-container img {
+    max-width: 200px;
+    margin: 10px;
+}
+
+/* Styles for captions */
+.image-container figcaption {
+    text-align: center;
+    margin-top: 5px;
+    font-style: italic;
+    color: white;
+}
+
+.image-container2 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+/* Styles for individual images */
+    .image-container2 img {
+    max-width: 500px;
+    margin: 10px;
+}
+
+/* Styles for captions */
+.image-container2 figcaption {
+    text-align: center;
+    margin-top: 5px;
+    font-style: italic;
 }
